# comp-coding

./: .gitignore  README.md  pyproject.toml
scripts/: run_pipeline.sh
src/comp_coding/: __init__.py  main.py  models.py  step1_create_blank_problems.py  step2_append_all_samples.py  step2_append_and_filter.py  step3_filter_samples.py  step3_partition_problems.py  step4_partition_problems.py
