[project]
name = "comp-coding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Justin Chiu", email = "justinchiu@cohere.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.8.0",
    "pre-commit>=3.5.0",
    "datasets==3.6.0",
    "tqdm>=4.67.1",
    "ty>=0.0.1a20",
    "pyright>=1.1.404",
    "pydantic>=2.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
